[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/InfoPanel.gd" type="Script" id=1]

[node name="InfoPanel" type="MarginContainer"]
margin_right = 14.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 170.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="BoxItems" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 163.0
margin_bottom = 73.0
custom_constants/separation = 10

[node name="Button" type="Button" parent="PanelContainer/BoxItems"]
visible = false
margin_right = 39.0
margin_bottom = 66.0
text = "Test"

[node name="Stats" type="VBoxContainer" parent="PanelContainer/BoxItems"]
margin_right = 82.0
margin_bottom = 66.0

[node name="LabelType" type="Label" parent="PanelContainer/BoxItems/Stats"]
margin_top = 2.0
margin_right = 82.0
margin_bottom = 16.0
size_flags_vertical = 6
text = "Worker"
valign = 1

[node name="LabelHP" type="Label" parent="PanelContainer/BoxItems/Stats"]
margin_top = 25.0
margin_right = 82.0
margin_bottom = 39.0
size_flags_vertical = 6
text = "10/10"

[node name="LabelGather" type="Label" parent="PanelContainer/BoxItems/Stats"]
margin_top = 49.0
margin_right = 82.0
margin_bottom = 63.0
size_flags_vertical = 6
text = "INCOMPLETE"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/BoxItems"]
margin_left = 92.0
margin_right = 92.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="BoxBuild" type="HBoxContainer" parent="PanelContainer/BoxItems/MarginContainer"]
margin_bottom = 66.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/BoxItems/MarginContainer"]
visible = false
margin_right = 500.0
margin_bottom = 66.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/BoxItems"]
margin_left = 102.0
margin_right = 156.0
margin_bottom = 66.0

[node name="ButtonCancel" type="Button" parent="PanelContainer/BoxItems/MarginContainer2"]
margin_right = 54.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Cancel"

[connection signal="pressed" from="PanelContainer/BoxItems/MarginContainer2/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
